rollout/canary-rollback.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-canary
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      svc_name: reviews
  template:
    metadata:
      labels:
        svc_name: reviews
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.17.0
        imagePullPolicy: IfNotPresent
        env:
        - name: LOG_DIR
          value: "/tmp/logs"
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: reviews   
          destinationRule:
            name: review-destination 
            canarySubsetName: canary
            stableSubsetName: stable
      steps:
      - setWeight: 50
      - pause:
          duration: 10m
