rollout/review_virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"VirtualService","metadata":{"annotations":{},"name":"reviews","namespace":"default"},"spec":{"hosts":["reviews"],"http":[{"route":[{"destination":{"host":"reviews","subset":"v1"},"weight":100},{"destination":{"host":"reviews","subset":"v2"},"weight":0}]}]}}
  creationTimestamp: "2023-07-29T14:34:09Z"
  generation: 30
  name: reviews
  namespace: default
  resourceVersion: "146430"
  uid: 11d67a46-1571-400e-b41c-0cd0ad4d1cad
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: stable
      weight: 100
    - destination:
        host: reviews
        subset: canary
      weight: 0
